--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-validator": "^6.6.1",
     "http-errors": "~1.6.3",
+    "joi": "^17.2.1",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "serve-favicon": "^2.5.0"
